# skysurf

./: .gitignore  DataTogther.ipynb  Estimating the sky-SB for SKYSURF.ipynb  JWST_skysb.ipynb  README.md  make_diagnostic.py  measureskyregion.py  measureskyregion_mean.py  percentile_clip.py  profound_estimate_sky.py  readme.md  skysurf_estimate_sky.py
.ipynb_checkpoints/: Estimating the sky-SB using the Percentile-clip Method-checkpoint.ipynb
Completeness_Calculator/: README.md  completenesscalculator.py
HST/: Estimating the sky-SB for SKYSURF.ipynb  README.md  requirements.txt
HST/Completeness/: ACS_elephant_data.csv  GUI_ACStable.csv  GUI_IRtable.csv  GUI_UVIStable.csv  IR_elephant_data.csv  (+6 more)
SkySB_Measurements/: measureskyregion.py  skysurf_estimate_sky.py  skysurf_log.txt
Zodiacal_Light_Model_IDL/: README.md  confint.pro  get_zmod.pro  mk_zdata.pro  phase_func_fns.pro  put_zpar.pro  run_model.pro  solar_sp.pro  solar_sp_values.txt  zkernel7p0.pro  zl_coeffs_str.pro  zpars.xdr  zutils.pro
Zodiacal_Light_Model_Python/: .gitignore  LICENSE  README.md  ZodiModel_Tutorial.ipynb  ZodiSURF_Tutorial.ipynb  pyproject.toml  requirements.txt  setup.py
Zodiacal_Light_Model_Python/Testing/: Compare with IDL Version - Isotropic Cloud.ipynb  Compare with IDL Version.ipynb  verify_accuracy.py
Zodiacal_Light_Model_Python/zodi_model/: __init__.py  colcorr.tab  get_zmod.py  solar_sp.py  zkernel6p8.py  zkernelpy.py
Zodiacal_Light_Model_Python/zodisurf/: __init__.py  aend_og_wlabels.json  check_wavelength.py  get_zmod.py  skysurf_params.py  solar_sp.py  zkernelpy.py
(+19 files in other folders)
